--- a/app/assets/stylesheets/_icon_font.scss
+++ b/app/assets/stylesheets/_icon_font.scss
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: "icons";
-  src: font-url("icons_8591d24a1ebb502943e4219619172115.eot");
-  src: font-url("icons_8591d24a1ebb502943e4219619172115.eot?#iefix") format("embedded-opentype"),
-       font-url("icons_8591d24a1ebb502943e4219619172115.woff") format("woff"),
-       font-url("icons_8591d24a1ebb502943e4219619172115.ttf") format("truetype"),
-       font-url("icons_8591d24a1ebb502943e4219619172115.svg#icons") format("svg");
+  src: font-url("icons_a95f0e7984836e3cc07aab431291dc7c.eot");
+  src: font-url("icons_a95f0e7984836e3cc07aab431291dc7c.eot?#iefix") format("embedded-opentype"),
+       font-url("icons_a95f0e7984836e3cc07aab431291dc7c.woff") format("woff"),
+       font-url("icons_a95f0e7984836e3cc07aab431291dc7c.ttf") format("truetype"),
+       font-url("icons_a95f0e7984836e3cc07aab431291dc7c.svg#icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "icons";
-    src: font-url("icons_8591d24a1ebb502943e4219619172115.svg#icons") format("svg");
+    src: font-url("icons_a95f0e7984836e3cc07aab431291dc7c.svg#icons") format("svg");
   }
 }
 
@@ -47,6 +47,7 @@
 .icon-reorder:before,
 .icon-search:before,
 .icon-settings:before,
+.icon-unknown:before,
 .icon-warning:before {
     display: inline-block;
   font-family: "icons";
@@ -86,6 +87,7 @@
 .icon-reorder:before { content: "\f324"; }
 .icon-search:before { content: "\f32d"; }
 .icon-settings:before { content: "\f32c"; }
+.icon-unknown:before { content: "\f332"; }
 .icon-warning:before { content: "\f331"; }
 
 $font-icons-access-time: "\f103";
@@ -112,4 +114,5 @@ $font-icons-person: "\f2ed";
 $font-icons-reorder: "\f324";
 $font-icons-search: "\f32d";
 $font-icons-settings: "\f32c";
+$font-icons-unknown: "\f332";
 $font-icons-warning: "\f331";
