--- a/app/assets/stylesheets/_groups.scss
+++ b/app/assets/stylesheets/_groups.scss
@@ -9,11 +9,34 @@
 }
 
 .group-preferences {
-  .color-selector {
-    text-align: center;
-    margin: 0 auto;
-    max-width: 22rem;
+  .switches {
+    padding-top: 0.25rem;
+
+    li label {
+      padding: 1rem 0;
+      line-height: 1rem;
+    }
   }
+
+  [rel="slug"] {
+    label {
+      @include order(0);
+      color: disabled-color();
+    }
+
+    input {
+      @include order(1);
+
+      &:disabled + label {
+        border-bottom: 1px dotted disabled-color();
+      }
+    }
+  }
+}
+
+.color-selector {
+  margin: 0.25rem -0.5rem;
+  max-width: 22rem;
 
   .color {
     display: inline-block;
